--- a/src/app/components/standard-sample/reagent-expiration/reagent-expiration.html
+++ b/src/app/components/standard-sample/reagent-expiration/reagent-expiration.html
@@ -13,16 +13,37 @@
   <div class="attestation-grid-container mat-elevation-z1">
     <table mat-table [dataSource]="gridRows()" class="attestation-grid">
 
-      <!-- Наименование -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Наименование</th>
-        <td mat-cell *matCellDef="let row">{{ row.equipment.name }}</td>
+        <th mat-header-cell
+            [matTooltip]="'Наименование, номер'"
+            *matHeaderCellDef>
+          Наименование, номер
+        </th>
+        <td mat-cell *matCellDef="let row" class="data-cell">
+          {{ row.equipment.name }}, № {{ row.equipment.number }}
+        </td>
       </ng-container>
 
-      <!-- Номер -->
-      <ng-container matColumnDef="number">
-        <th mat-header-cell *matHeaderCellDef>Номер СО/ партии</th>
-        <td mat-cell *matCellDef="let row">{{ row.equipment.number }}</td>
+      <ng-container matColumnDef="initialQuantity">
+        <th mat-header-cell
+            [matTooltip]="'Приход'"
+            *matHeaderCellDef>
+          Приход
+        </th>
+        <td mat-cell *matCellDef="let row" class="data-cell">
+          {{ getValue(row.equipment.initialQuantity, row.equipment.unit) }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="remains">
+        <th mat-header-cell
+            [matTooltip]="'Остаток'"
+            *matHeaderCellDef>
+          Остаток
+        </th>
+        <td mat-cell *matCellDef="let row" class="data-cell">
+          {{ getValue(row.equipment.remains, row.equipment.unit) }}
+        </td>
       </ng-container>
 
       <!-- Месяцы -->
