--- a/src/app/components/standard-sample/standard/standard-equipment-dialog/standard-equipment-dialog.scss
+++ b/src/app/components/standard-sample/standard/standard-equipment-dialog/standard-equipment-dialog.scss
@@ -42,3 +42,14 @@
   align-items: center;
   justify-content: center;
 }
+
+.input-with-button {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.open-guide-button {
+  margin-left: 8px;
+  margin-right: 4px; // компенсация отступа matInput
+}
