--- a/src/styles/_table-style.scss
+++ b/src/styles/_table-style.scss
@@ -57,4 +57,17 @@ h2 {
   width: 240px;
 }
 
+.documents-list {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.document-item {
+  padding: 2px 6px;
+  background: rgba(0, 0, 0, 0.04);
+  border-radius: 4px;
+  font-size: 0.9em;
+}
+
 
